# magic-color

./: .editorconfig  .gitignore  .npmrc  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  DONE.md  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.scripts.json  vite.config.ts  vite.report.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
core/: Cargo.toml
core/src/: difficulty.rs  engine.rs  funnels.rs  generator.rs  hidden.rs  ice.rs  jsnum.rs  lib.rs  live.rs  mechanics.rs  progression.rs  rng.rs  search.rs  session.rs  solver.rs  state.rs  types.rs  wasm.rs
core/tests/: conformance.rs  difficulty_vectors.rs  rng_vectors.rs
docs/: solid.md  ui.md
e2e/: play.spec.ts  smoke.spec.ts
exe/: dev  levels  run  test
public/: CNAME
report/: MetricChart.tsx  Report.tsx  data.ts  index.html  main.tsx  report.css
scripts/: archive-report.ts  benchmark-generation.ts  build-levels.ts  build-levels.worker.ts  check.ts  coreVersion.ts  dev-all.ts  dev-core.ts  emit-baked-from-rust.ts  emit-core-stamp.ts  emit-provenance.ts  emit-vectors.ts  gate.ts  level-report.ts  levelVersion.ts  levels.provenance.json  levels.ts  run.ts  verify-bake.ts  verify-trace.ts
scripts/build-history/: 260cf442cecc2acf.json  296eb84f283b7c14.json  874caec0a6f9133f.json  898541f87bb295c7.json  bf5b8758457d1e53.json  fdbb3c67aee05008.json  rust-37d2b49699957cf7.json
src/: App.module.css  App.tsx  Boot.module.css  main.tsx  share.test.ts  share.ts  useHashRoute.test.ts  useHashRoute.ts
src/audio/: context.ts  cues.ts  feedback.ts  haptics.ts  music.ts  sound.ts
src/components/: mechanicInfo.tsx
src/game/: baked.test.ts  baked.ts  capping.test.ts  chapters.ts  coreHintWorker.ts  coreLive.test.ts  coreVersion.test.ts  coreWasm.test.ts  coreWasm.ts  daily.test.ts  daily.ts  difficulty.test.ts  difficulty.ts  engine.test.ts  engine.ts  funnels.test.ts  funnels.ts  hidden.ts  (+37 more)
vectors/: README.md  difficulty.json  rng.json  solver.json
(+91 files in other folders)
