[package]
name = "magic-color-core"
version = "0.1.0"
edition = "2021"

[lib]
# rlib for the native bake binary + tests; cdylib for the wasm-pack build.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bake"
path = "src/bin/bake.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
