[package]
name = "magic-color-core"
version = "0.1.0"
edition = "2021"

[lib]
# rlib for the native bake binary + tests; cdylib for the wasm-pack build.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bake"
path = "src/bin/bake.rs"

[dependencies]
# Deterministic float math for the difficulty curve: std's `powf` may differ between the
# native and wasm targets, which would break cross-target bake determinism. libm is pure
# Rust — bit-identical everywhere.
libm = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

# Native-only: the bake binary's parallelism + JSON output (never compiled into the wasm).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
